Switching to have the last ui element within .middle-content set the margin-bottom. fixes https://github.com/openshift/origin-web-console/issues/1083

--- a/app/styles/_log.less
+++ b/app/styles/_log.less
@@ -65,6 +65,10 @@
   font-family: @font-family-monospace;
   padding: 0;
   position: relative;
+  .mar-bottom-xl();
+  .chromeless & {
+    margin-bottom: 0;
+  }
   pre, pre code {
     background-color: transparent;
     border: 0;
